Implement CR-002: Java 11 baseline, JAXB 2.3.9
- Build on JDK 11+ and emit Java 11 bytecode (maven.compiler.release=11);
  enforcer range raised to [11,).
- JAXB 2.2.11 -> 2.3.9; declare javax.xml.bind:jaxb-api 2.3.1 and
  com.sun.activation:javax.activation 1.2.0 explicitly (they left the JDK
  in Java 11). `compiler` gets them as provided, `full` bundles them so the
  CLI jar runs on modern JDKs again.
- Relocate the RELAX NG datatype import (org.relaxng.datatype ->
  com.sun.tools.rngdatatype) in the three classes that use it; JAXB 2.3.1
  renamed the package, which is what broke the plugin under
  maven-jaxb2-plugin >= 0.14.
- maven-jaxb2-plugin 0.13.1 -> 0.15.3; tests/issues gains jaxb-api and
  jaxb-runtime; tests/zero opens java.base/java.net for legato-testing.
- CI matrix 11/17/21; README gains a Requirements section; docs updated.

Verified on JDK 17 and 21: full build with integration suite green,
class files at major version 55, CLI jar produces mappings and JSON
Schema for samples/po. JDK 8 is rejected by the enforcer and the jar.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015Xh3o4fUnqg26aA4PXsheG